# SlicerOnDemand

./: CMakeLists.txt  README.md  tox.ini
OnDemand/: CMakeLists.txt  OnDemand.py
OnDemand/Resources/QSS/: OnDemand.qss
OnDemand/Resources/UI/: OnDemand.ui  OnDemandMainWindow.ui  robotButton.ui  rocketButton.ui  shutDownButton.ui  successButton.ui  tunnelButton.ui
